# paprika

./: Pipfile  setup.cfg
paprika/: api.py  cli.py  models.py  recipes.db
paprika/templates/: layout.html  recipe.html
