[metadata]
name = paprika
version = attr: paprika.__version__
description = Interact with Paprika reipces
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/paprika
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
include_package_data = True
install_requires =
  aiohttp
  click

[options.entry_points]
console_scripts =
    paprika = paprika.cli:main
